spacing issues

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -28,7 +28,7 @@ img {
 }
 
 .form p {
-  font-size: 1.3em;
+  font-size: 1.5em;
   text-align: center;
   line-height: 1.55em;
   width: 70%;
@@ -78,6 +78,7 @@ button:focus {
   margin-left: auto;
   margin-right: auto;
   margin-top: 1.5em;
+  font-size: 1.3em;
 }
 
 .results {
@@ -122,7 +123,7 @@ button:focus {
 }
 
 footer h3 {
-  line-height: 1.2em;
+  line-height: 1.3em;
   font-size: 1.1em;
   font-weight: 600;
   width: 70%;
@@ -140,7 +141,7 @@ h4 {
 }
 
 footer {
-  margin-top: 3.5em;
+  margin-top: 2.5em;
   padding-bottom: 3em;
 }
 
@@ -155,6 +156,10 @@ footer {
 }
 
 @media only screen and (max-width: 400px) {
+  .form p {
+    font-size: 1.2em;
+  }
+
   .column-one {
     float: none;
     margin-right: 0em;
@@ -169,7 +174,7 @@ footer {
   }
 
   footer h3 {
-    font-size: 1em;
+    font-size: .8em;
   }
 
   h4 {
